fix(web-components): update navigation buttons to have 100% height
Update navigation buttons to have 100% height so that focus doesn't appear cut off on small
breakpoints

. #598

--- a/packages/web-components/src/components/ic-navigation-button/ic-navigation-button.css
+++ b/packages/web-components/src/components/ic-navigation-button/ic-navigation-button.css
@@ -9,3 +9,7 @@
 :host(.in-side-menu) {
   margin-right: 0;
 }
+
+:host::part(button) {
+  height: 100%;
+}
